# terraform-provider-bootc

./: .gitignore  .golangci.yml  .goreleaser.yml  .mise.toml  Cargo.toml  README.md  go.mod  main.go
.github/workflows/: release.yml  test.yml
bootc/: bridge.go  provider.go  provider_test.go  resource_image.go  resource_image_test.go  validators.go
bootc-bridge/: Cargo.toml
bootc-bridge/src/: lib.rs
scripts/: build.sh  prepare-dist.sh
