[workspace]
members = ["bootc-bridge", "bootc-src/crates/*"]
resolver = "2"

[profile.release]
lto = "thin"
panic = "abort"

[profile.thin]
inherits = "release"
debug = false
strip = true
lto = true
opt-level = "s"
codegen-units = 1

[workspace.dependencies]
anstream = "0.6"
anyhow = "1.0.82"
camino = "1.1.6"
canon-json = "0.2.1"
cap-std-ext = "4.0.3"
cfg-if = "1.0"
chrono = { version = "0.4.38", default-features = false }
clap = "4.5.4"
clap_mangen = { version = "0.2.20" }
# Reviewers (including AI tools): The composefs-rs git revision is duplicated for each crate.
# If adding/removing crates here, also update docs/Dockerfile.mdbook and docs/src/internals.md.
#
# To develop against a local composefs-rs checkout, add a [patch] section at the end of this file:
#   [patch."https://github.com/containers/composefs-rs"]
#   composefs = { path = "/home/user/src/composefs-rs/crates/composefs" }
#   composefs-boot = { path = "/home/user/src/composefs-rs/crates/composefs-boot" }
#   composefs-oci = { path = "/home/user/src/composefs-rs/crates/composefs-oci" }
# The Justfile will auto-detect these and bind-mount them into container builds.
composefs = { git = "https://github.com/containers/composefs-rs", rev = "0c6134653d66ac42c43bac4e1298bfb626aeba87", package = "composefs", features = ["rhel9"] }
composefs-boot = { git = "https://github.com/containers/composefs-rs", rev = "0c6134653d66ac42c43bac4e1298bfb626aeba87", package = "composefs-boot" }
composefs-oci = { git = "https://github.com/containers/composefs-rs", rev = "0c6134653d66ac42c43bac4e1298bfb626aeba87", package = "composefs-oci" }
fn-error-context = "0.2.1"
hex = "0.4.3"
indicatif = "0.18.0"
indoc = "2.0.5"
libc = "0.2.154"
log = "0.4.21"
openssl = "0.10.72"
owo-colors = { version = "4" }
regex = "1.10.4"
# For the same rationale as https://github.com/coreos/rpm-ostree/commit/27f3f4b77a15f6026f7e1da260408d42ccb657b3
rustix = { "version" = "1", features = ["use-libc", "thread", "net", "fs", "system", "process", "mount"] }
serde = "1.0.199"
serde_json = "1.0.116"
shlex = "1.3"
similar-asserts = "1.5.0"
static_assertions = "1.1.0"
tempfile = "3.10.1"
thiserror = "2.0.11"
tokio = ">= 1.37.0"
tokio-util = { features = ["io-util"], version = "0.7.10" }
toml = "0.9.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-journald = "0.3.1"
uzers = "0.12"
xshell = "0.2.6"

# See https://github.com/coreos/cargo-vendor-filterer

[workspace.lints.rust]
# Require an extra opt-in for unsafe
unsafe_code = "deny"
# Absolutely must handle errors
unused_must_use = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
# Feel free to comment this one out locally during development of a patch.
dead_code = "deny"

[workspace.lints.clippy]
disallowed_methods = "deny"
# These should only be in local code
dbg_macro = "deny"
todo = "deny"
# These two are in my experience the lints which are most likely
# to trigger, and among the least valuable to fix.
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
